--- a/添加远程仓库.md
+++ b/添加远程仓库.md
@@ -4,6 +4,8 @@
 1.首先，登陆GitHub，然后，在右上角找到“New repository”按钮，创建一个新的仓库。
 2.在Repository name填入远程仓库的名字，其他保持默认设置，点击“Create repository”按钮，就成功地创建了一个新的Git仓库。
 3.在本地已经建立好的本地仓库下，终端运行：$ git remote add origin git@github.com:tangdaoyong/github上远程仓库的名字.git
+取消本地目录下关联的远程库用(git remote remove origin)
+
 >添加后，远程库的名字就是origin，这是Git默认的叫法，也可以改成别的，但是origin这个名字一看就知道是远程库。
 4.把本地库的内容推送到远程：$ git push -u origin master
 >把本地库的内容推送到远程，用git push命令，实际上是把当前分支master推送到远程。
